...
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: [
          ElevatedButton(
            style: ElevatedButton.styleFrom(backgroundColor: kDarkGrey, side: const BorderSide(color: kRedError, width: 3)),
            onPressed: () => Navigator.pop(context),
            child: const Text('Powrót', style: TextStyle(color: kRedError)),
          ),
          ElevatedButton(
            style: ElevatedButton.styleFrom(backgroundColor: kRedError),
            onPressed: () => debugPrint('Dodano do koszyka'),
            child: const Text('Dodaj', style: TextStyle(color: kWhite)),
          ),
        ],
      ),
    );
  }
}
...
