...
          return Scaffold(
            backgroundColor: kSurfaceLighter,
            appBar: AppBar(
              backgroundColor: kPrimaryDark,
              iconTheme: const IconThemeData(color: kWhite),
              title: const Text(
                'Podsumowanie',
                style: TextStyle(color: kWhite),
              ),
              centerTitle: true,
            ),


...
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  const SizedBox(height: 16),

                  Text(
                    'Twój zestaw jest gotowy!',
                    style: TextStyle(
                      fontSize: 22,
                      fontWeight: FontWeight.bold,
                      color: kPurple.withOpacity(0.8),
                    ),
                  ),
...
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(12),
                        ),
                      ),
                      onPressed: () => _onSavePressed(context, vm),
                      child: const Text(
                        'Zapisz',
                        style: TextStyle(
                          color: kWhite,
                          fontSize: 16,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
...
          actions: [
            TextButton(
              child: const Text('Anuluj'),
              onPressed: () => Navigator.of(ctxDialog).pop(),
            ),
            TextButton(
              child: const Text('Zapisz mimo to'),
              onPressed: () {
                Navigator.of(ctxDialog).pop();
                _performSaveAndPop(context, vm);
              },
            ),
          ],
...
