...
                      child: ElevatedButton(
                        style: ElevatedButton.styleFrom(backgroundColor: kSurfaceLight, shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(8)), padding: const EdgeInsets.symmetric(vertical: 10)),
                        onPressed: () {
                          Navigator.push(context, MaterialPageRoute(builder: (_) => DetailViewMVVM(product: product)));
                          onDetailsPressed();
                        },
                        child: const Text('Szczegóły', style: TextStyle(color: kDarkGrey, fontSize: 16)),
                      ),
                    ),
                    const SizedBox(width: 16),
                    Expanded(
                      child: ElevatedButton(
                        style: ElevatedButton.styleFrom(backgroundColor: kRedError, shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(8)), padding: const EdgeInsets.symmetric(vertical: 10)),
...
